<resources>
    <string name="app_name">Recipes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="logout">Logout</string>
</resources>